nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud-container
        image: nextcloud:24
        
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
