redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      type: redis
  template:
    metadata:
      labels:
        type: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc	
spec:
  selector:
    type: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
