ingresss.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   annotations:
#     kubernetes.io/ingress.class: ingress-nginx

#   labels:
#     name: myingress
# spec:
#   rules:  
#   - host: omar-onboarding.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: nextcloud-svc
#             port: 
#               number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myservicea
# spec:
#   rules:
#   - host: myservicea.foo.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nextcloud-svc
#             port:
#               number: 80
#   ingressClassName: nginx

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: example-ing
spec:
    ingressClassName: nginx
    rules:
      - host: app-test1.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: next1-nextcloud-svc
                  port:
                    number: 80
              path: /
